# Finance-Assistant

./: .env.example  .gitignore  .vercelignore  ANNOTATED_EXPLAINED.md  APP_FLOW_GUIDE.md  CONTEXT_FIX_SUMMARY.md  CONTEXT_FLOW_DIAGRAM.md  CONTEXT_LOSS_ISSUE.md  FLOW_DIAGRAMS.md  FLOW_SUMMARY.md  FULL_HISTORY_VS_SUMMARY.md  LANGCHAIN_OBJECT_FIX.md  LANGGRAPH_IMPLEMENTATION.md  PERFORMANCE_QUERY_FIX.md  QUICK_REFERENCE.md  README.md  ROUTER_FIX_APPLIED.md  ROUTING_ISSUE_ANALYSIS.md  STREAMING_EXPLANATION.md  TOKEN_FLOW_DIAGRAM.md  TYPING_INDICATOR_ADDED.md  TYPING_INDICATOR_VISUAL.md  WEB_UI_GUIDE.md  main_langgraph.py  pyproject.toml  pytest.ini  requirements.txt  run_webapp.py
api/: index.py
src/: __init__.py  config.py  prompts.py
src/agents/: __init__.py  goal_planning.py  market_analysis.py  news_synthesizer.py  portfolio_analysis.py  ques_ans.py
src/core/tools/: goal_planning.py  market_analysis.py  news_synthesis.py  portfolio_analysis.py
src/orchestration/: __init__.py  graph.py  nodes.py  router.py  supervisor.py  types.py
src/rag/: __init__.py  ingestion.py  retrieval_and_generation.py
src/utils/: __init__.py  context_manager.py
tests/: README.md  __init__.py  conftest.py  test_goal_planning_simple.py  test_graph_structure.py  test_langgraph.py  test_market_analysis_simple.py  test_news_synthesis_simple.py  test_portfolio_analysis_simple.py  test_refactoring.py  test_routing.py  test_simplified_graph.py
tests/unit/: test_config.py  test_prompts.py
web_app/: README.md  TROUBLESHOOTING.md  __init__.py  app.py  test_ui.py
